Fix the milvus search, addition and deletion, added new milvus ui known as attu