@@ -186,30 +186,97 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
             return getEmbedding(text, targetTool, modelType, teamId)
                     .flatMap(embedding -> {
                         try {
+                            // First get the collection schema to ensure we provide all fields
+                            R<DescribeCollectionResponse> describeResponse = milvusClient.describeCollection(
+                                DescribeCollectionParam.newBuilder()
+                                    .withCollectionName(collectionName)
+                                    .build()
+                            );
+                            
                             List<InsertParam.Field> fields = new ArrayList<>();
-                            record.forEach((key, value) -> {
-                                if (!key.equals(textField)) {
-                                    fields.add(new InsertParam.Field(key, List.of(value)));
+                            
+                            // Add ID field with timestamp-based unique ID
+                            long uniqueId = System.currentTimeMillis();
+                            fields.add(new InsertParam.Field("id", Collections.singletonList(uniqueId)));
+                            
+                            // Add embedding field
+                            fields.add(new InsertParam.Field("embedding", Collections.singletonList(embedding)));
+                            
+                            // Add text field
+                            fields.add(new InsertParam.Field(textField, Collections.singletonList(text)));
+                            
+                            // Add all other fields from the schema, using null if not provided in the record
+                            for (io.milvus.grpc.FieldSchema fieldSchema : describeResponse.getData().getSchema().getFieldsList()) {
+                                String fieldName = fieldSchema.getName();
+                                if (!fieldName.equals("id") && !fieldName.equals("embedding") && !fieldName.equals(textField)) {
+                                    Object value = record.get(fieldName);
+                                    
+                                    // Check if field is required (not nullable) and value is null
+                                    if (value == null && !fieldSchema.getNullable()) {
+                                        // For non-nullable fields, provide a default value based on the data type
+                                        value = switch (fieldSchema.getDataType()) {
+                                            case Int64, Int32 -> 0L;
+                                            case Float -> 0.0f;
+                                            case Double -> 0.0;
+                                            case VarChar, String -> "";
+                                            default ->
+                                                    throw new IllegalArgumentException("Field '" + fieldName + "' is required but no value was provided and no default value is available for its type");
+                                        };
+                                    }
+                                    
+                                    // If value is null, pass it through as-is
+                                    Object convertedValue = value;
+                                    if (value != null) {
+                                        try {
+                                            // Convert values based on the field's data type from schema
+                                            switch (fieldSchema.getDataType()) {
+                                                case Int64:
+                                                    convertedValue = ((Number) value).longValue();
+                                                    break;
+                                                case Int32:
+                                                    convertedValue = ((Number) value).intValue();
+                                                    break;
+                                                case Float:
+                                                    convertedValue = ((Number) value).floatValue();
+                                                    break;
+                                                case Double:
+                                                    convertedValue = ((Number) value).doubleValue();
+                                                    break;
+                                                case VarChar:
+                                                case String:
+                                                    convertedValue = value.toString();
+                                                    break;
+                                                default:
+                                            }
+                                        } catch (Exception e) {
+                                            log.warn("Failed to convert value for field {}: {}. Using original value.", fieldName, e.getMessage());
+                                        }
+                                    }
+                                    
+                                    // Add the field with either the converted value or null
+                                    fields.add(new InsertParam.Field(fieldName, Collections.singletonList(convertedValue)));
                                 }
-                            });
-                            fields.add(new InsertParam.Field("embedding", List.of(embedding)));
-                            fields.add(new InsertParam.Field(textField, List.of(text)));
-                            fields.add(new InsertParam.Field("teamId", List.of(teamId)));
+                            }
 
                             InsertParam insertParam = InsertParam.newBuilder()
                                     .withCollectionName(collectionName)
                                     .withFields(fields)
                                     .build();
+                            
+                            log.info("Inserting record with fields: {}", fields.stream()
+                                    .map(f -> f.getName() + ": " + f.getValues().getFirst())
+                                    .collect(Collectors.joining(", ")));
+                            
                             milvusClient.insert(insertParam);
                             log.info("Stored record in collection {}", collectionName);
                             return Mono.just(Map.of("message", "Record stored successfully in collection " + collectionName));
                         } catch (Exception e) {
-                            log.error("Failed to store record in collection {}: {}", collectionName, e.getMessage());
+                            log.error("Failed to store record in collection {}: {}", collectionName, e.getMessage(), e);
                             return Mono.error(e);
                         }
                     });
         } catch (Exception e) {
-            log.error("Failed to store record in collection {}: {}", collectionName, e.getMessage());
+            log.error("Failed to store record in collection {}: {}", collectionName, e.getMessage(), e);
             return Mono.error(e);
         }
     }
@@ -226,6 +293,7 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
         LinqRequest.Query query = new LinqRequest.Query();
         query.setIntent("embed");
         query.setParams(Map.of("text", text));
+        
         LinqRequest.Query.ToolConfig toolConfig = new LinqRequest.Query.ToolConfig();
         toolConfig.setModel(modelType);
         query.setToolConfig(toolConfig);
@@ -236,14 +304,37 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
                 .flatMap(tool -> linqToolService.executeToolRequest(request, tool))
                 .map(response -> {
                     Map<String, Object> result = (Map<String, Object>) response.getResult();
+                    if (result == null) {
+                        throw new IllegalStateException("Received null result from embedding service");
+                    }
+                    
+                    if (result.containsKey("error")) {
+                        throw new IllegalStateException("Embedding service error: " + result.get("error"));
+                    }
+
                     if ("openai-embed".equals(targetTool)) {
                         List<Map<String, Object>> data = (List<Map<String, Object>>) result.get("data");
-                        return (List<Float>) data.get(0).get("embedding");
+                        if (data == null || data.isEmpty()) {
+                            throw new IllegalStateException("No data received from OpenAI embedding service");
+                        }
+                        List<Object> rawEmbedding = (List<Object>) data.get(0).get("embedding");
+                        return rawEmbedding.stream()
+                            .map(value -> ((Number) value).floatValue())
+                            .collect(Collectors.toList());
                     } else if ("huggingface".equals(targetTool)) {
-                        return (List<Float>) result.get("embedding");
+                        List<Object> rawEmbedding = (List<Object>) result.get("embedding");
+                        return rawEmbedding.stream()
+                            .map(value -> ((Number) value).floatValue())
+                            .collect(Collectors.toList());
                     } else if ("gemini-embed".equals(targetTool)) {
                         List<Map<String, Object>> data = (List<Map<String, Object>>) result.get("data");
-                        return (List<Float>) data.get(0).get("embedding");
+                        if (data == null || data.isEmpty()) {
+                            throw new IllegalStateException("No data received from Gemini embedding service");
+                        }
+                        List<Object> rawEmbedding = (List<Object>) data.get(0).get("embedding");
+                        return rawEmbedding.stream()
+                            .map(value -> ((Number) value).floatValue())
+                            .collect(Collectors.toList());
                     }
                     throw new IllegalArgumentException("Unsupported embedding tool: " + targetTool);
                 });
@@ -274,20 +365,48 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
             String idField = Arrays.stream(outputFields).filter(f -> f.equals("id")).findFirst().orElse("id");
             String textField = Arrays.stream(outputFields).filter(f -> !f.equals("id") && !f.equals("embedding")).findFirst().orElse(outputFields[0]);
 
-            SearchResultData result = results.getResults();
+            SearchResultData resultData = results.getResults();
             
-            // Process all results since they're already filtered by teamId
-            for (int i = 0; i < result.getNumQueries(); i++) {
-                ids.add(((List<?>) result.getField(result.getDescriptorForType().findFieldByName(idField))).get(i));
-                documents.add(((List<?>) result.getField(result.getDescriptorForType().findFieldByName(textField))).get(i));
-                Map<String, Object> metadata = new HashMap<>();
-                for (String field : outputFields) {
-                    if (!field.equals("embedding")) {
-                        metadata.put(field, ((List<?>) result.getField(result.getDescriptorForType().findFieldByName(field))).get(i));
-                    }
+            // Extract results using the correct field access method
+            for (int i = 0; i < resultData.getNumQueries(); i++) {
+                // Get ID field
+                var idFieldData = resultData.getFieldsDataList().stream()
+                    .filter(f -> f.getFieldName().equals("id"))
+                    .findFirst()
+                    .orElse(null);
+                if (idFieldData != null && idFieldData.getScalars().hasLongData() && idFieldData.getScalars().getLongData().getDataCount() > i) {
+                    ids.add(idFieldData.getScalars().getLongData().getData(i));
                 }
-                metadatas.add(metadata);
-                distances.add((Float) ((List<?>) result.getField(result.getDescriptorForType().findFieldByName("distance"))).get(i));
+                
+                // Get text field
+                var textFieldData = resultData.getFieldsDataList().stream()
+                    .filter(f -> f.getFieldName().equals(textField))
+                    .findFirst()
+                    .orElse(null);
+                if (textFieldData != null && textFieldData.getScalars().hasStringData() && textFieldData.getScalars().getStringData().getDataCount() > i) {
+                    documents.add(textFieldData.getScalars().getStringData().getData(i));
+                }
+                
+                // Get distance field
+                var distanceField = resultData.getFieldsDataList().stream()
+                    .filter(f -> f.getFieldName().equals("distance"))
+                    .findFirst()
+                    .orElse(null);
+                
+                if (distanceField != null) {
+                    log.info("Found distance field: {}", distanceField.getScalars().getDataCase());
+                    if (distanceField.getScalars().hasFloatData() && distanceField.getScalars().getFloatData().getDataCount() > i) {
+                        distances.add(distanceField.getScalars().getFloatData().getData(i));
+                    } else if (distanceField.getScalars().hasDoubleData() && distanceField.getScalars().getDoubleData().getDataCount() > i) {
+                        distances.add((float) distanceField.getScalars().getDoubleData().getData(i));
+                    } else {
+                        log.warn("Distance field found but no data available at index {}", i);
+                        distances.add(0.0f); // Default distance
+                    }
+                } else {
+                    log.warn("Distance field not found in search results");
+                    distances.add(0.0f); // Default distance
+                }
             }
 
             Map<String, Object> resultMap = new HashMap<>();
@@ -295,6 +414,21 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
             resultMap.put("documents", documents);
             resultMap.put("metadatas", metadatas);
             resultMap.put("distances", distances);
+
+            log.info("Extracted search results - ids: {}, documents: {}, distances: {}", 
+                ids.size(), documents.size(), distances.size());
+            
+            // Log available fields for debugging
+            log.info("Available fields in search results:");
+            for (var field : resultData.getFieldsDataList()) {
+                log.info("Field: {} - Type: {} - Data count: {}", 
+                    field.getFieldName(), 
+                    field.getScalars().getDataCase(),
+                    field.getScalars().hasLongData() ? field.getScalars().getLongData().getDataCount() :
+                    field.getScalars().hasStringData() ? field.getScalars().getStringData().getDataCount() :
+                    field.getScalars().hasFloatData() ? field.getScalars().getFloatData().getDataCount() :
+                    field.getScalars().hasDoubleData() ? field.getScalars().getDoubleData().getDataCount() : 0);
+            }
 
             log.info("Retrieved {} results from collection {} for team {}", ids.size(), collectionName, teamId);
             return Mono.just(resultMap);
@@ -360,7 +494,7 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
                         return null;
                     }
                 }))
-                .collect(Collectors.toList());
+                .toList();
 
             // Wait for all checks to complete and collect results
             List<MilvusCollectionInfo> collections = new ArrayList<>();
@@ -413,7 +547,7 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
                         return new MilvusCollectionInfo(collectionName, "unknown");
                     }
                 }))
-                .collect(Collectors.toList());
+                .toList();
 
             // Wait for all checks to complete and collect results
             List<MilvusCollectionInfo> collections = new ArrayList<>();
@@ -428,6 +562,149 @@ public class LinqMilvusStoreServiceImpl implements LinqMilvusStoreService {
             return Mono.just(collections);
         } catch (Exception e) {
             log.error("Failed to list all collections: {}", e.getMessage());
+            return Mono.error(e);
+        }
+    }
+
+    @Override
+    public Mono<Map<String, Object>> verifyRecord(String collectionName, String textField, String text, String teamId, String targetTool, String modelType) {
+        log.info("Verifying record in collection {} for team {} with text: {} using tool: {} and model: {}", collectionName, teamId, text, targetTool, modelType);
+        try {
+            // First verify the collection belongs to the team
+            R<DescribeCollectionResponse> describeResponse = milvusClient.describeCollection(
+                DescribeCollectionParam.newBuilder()
+                    .withCollectionName(collectionName)
+                    .build()
+            );
+            
+            boolean teamIdMatches = false;
+            for (KeyValuePair property : describeResponse.getData().getPropertiesList()) {
+                if ("teamId".equals(property.getKey()) && teamId.equals(property.getValue())) {
+                    teamIdMatches = true;
+                    break;
+                }
+            }
+            
+            if (!teamIdMatches) {
+                return Mono.just(Map.of("message", "Collection does not belong to team " + teamId));
+            }
+
+            // Get embedding for the search text using dynamic tool and model
+            return getEmbedding(text, targetTool, modelType, teamId)
+                .flatMap(searchEmbedding -> {
+                    try {
+                        // Use vector search to find similar records
+                        SearchParam searchParam = SearchParam.newBuilder()
+                            .withCollectionName(collectionName)
+                            .withFloatVectors(List.of(searchEmbedding))
+                            .withTopK(5)
+                            .withMetricType(METRIC_TYPE)
+                            .withConsistencyLevel(ConsistencyLevelEnum.STRONG)
+                            .withVectorFieldName(EMBEDDING_FIELD)
+                            .withOutFields(Arrays.asList("id", textField))
+                            .withParams("{\"ef\":" + SEARCH_PARAM_EF + "}")
+                            .build();
+
+                        log.info("Executing semantic search for text: {}", text);
+                        SearchResults results = milvusClient.search(searchParam).getData();
+                        
+                        if (results == null || results.getResults().getNumQueries() == 0) {
+                            log.info("No results found in semantic search");
+                            return Mono.just(Map.of("message", "No similar records found"));
+                        }
+
+                        SearchResultData resultData = results.getResults();
+                        List<Object> ids = new ArrayList<>();
+                        List<Object> documents = new ArrayList<>();
+                        List<Float> distances = new ArrayList<>();
+
+                        // Extract results using the correct field access method
+                        for (int i = 0; i < resultData.getNumQueries(); i++) {
+                            // Get ID field
+                            var idFieldData = resultData.getFieldsDataList().stream()
+                                .filter(f -> f.getFieldName().equals("id"))
+                                .findFirst()
+                                .orElse(null);
+                            if (idFieldData != null && idFieldData.getScalars().hasLongData() && idFieldData.getScalars().getLongData().getDataCount() > i) {
+                                ids.add(idFieldData.getScalars().getLongData().getData(i));
+                            }
+                            
+                            // Get text field
+                            var textFieldData = resultData.getFieldsDataList().stream()
+                                .filter(f -> f.getFieldName().equals(textField))
+                                .findFirst()
+                                .orElse(null);
+                            if (textFieldData != null && textFieldData.getScalars().hasStringData() && textFieldData.getScalars().getStringData().getDataCount() > i) {
+                                documents.add(textFieldData.getScalars().getStringData().getData(i));
+                            }
+                            
+                            // Get distance field
+                            var distanceField = resultData.getFieldsDataList().stream()
+                                .filter(f -> f.getFieldName().equals("distance"))
+                                .findFirst()
+                                .orElse(null);
+                            
+                            if (distanceField != null) {
+                                log.info("Found distance field: {}", distanceField.getScalars().getDataCase());
+                                if (distanceField.getScalars().hasFloatData() && distanceField.getScalars().getFloatData().getDataCount() > i) {
+                                    distances.add(distanceField.getScalars().getFloatData().getData(i));
+                                } else if (distanceField.getScalars().hasDoubleData() && distanceField.getScalars().getDoubleData().getDataCount() > i) {
+                                    distances.add((float) distanceField.getScalars().getDoubleData().getData(i));
+                                } else {
+                                    log.warn("Distance field found but no data available at index {}", i);
+                                    distances.add(0.0f); // Default distance
+                                }
+                            } else {
+                                log.warn("Distance field not found in search results");
+                                distances.add(0.0f); // Default distance
+                            }
+                        }
+
+                        // Find exact text match among semantic search results
+                        Map<String, Object> verification = new HashMap<>();
+                        boolean foundExactMatch = false;
+                        
+                        // Check if we have any results before processing
+                        if (ids.isEmpty() || documents.isEmpty() || distances.isEmpty()) {
+                            log.warn("No search results found - ids: {}, documents: {}, distances: {}", 
+                                ids.size(), documents.size(), distances.size());
+                            return Mono.just(Map.of("message", "No search results found"));
+                        }
+                        
+                        for (int i = 0; i < documents.size(); i++) {
+                            String storedText = documents.get(i).toString();
+                            if (storedText.equalsIgnoreCase(text)) {
+                                verification.put("id", ids.get(i));
+                                verification.put(textField, storedText);
+                                verification.put("distance", distances.get(i));
+                                verification.put("match_type", "exact");
+                                foundExactMatch = true;
+                                log.info("Found exact match with distance: {}", distances.get(i));
+                                break;
+                            }
+                        }
+
+                        if (!foundExactMatch) {
+                            // Return the most similar result
+                            verification.put("id", ids.getFirst());
+                            verification.put(textField, documents.getFirst());
+                            verification.put("distance", distances.getFirst());
+                            verification.put("match_type", "semantic");
+                            verification.put("search_text", text);
+                            log.info("Found semantic match with distance: {}", distances.getFirst());
+                        }
+
+                        log.info("Successfully verified record with fields: {}", verification.keySet());
+                        return Mono.just(verification);
+                        
+                    } catch (Exception e) {
+                        log.error("Failed to perform semantic search: {}", e.getMessage(), e);
+                        return Mono.error(e);
+                    }
+                });
+                
+        } catch (Exception e) {
+            log.error("Failed to verify record in collection {}: {}", collectionName, e.getMessage(), e);
             return Mono.error(e);
         }
     }
